Fix discount x-icon position: not overlap with text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,7 +42,7 @@ header {
 
 .x-icon {
   position: absolute;
-  right: 100px;
+  right: min(100px, 5vw);
   cursor: pointer;
 }
 
